package com.panda.design.structure.adapter;

/**
 * 高级媒体播放器
 */
public interface AdvancedMediaPlayer {
   public void playVlc(String fileName);
   public void playMp4(String fileName);
}