package com.panda.design.structure.adapter;

/**
 * 媒体播放器
 */
public interface MediaPlayer {
   public void play(String audioType, String fileName);
}